# KsClothing

./: README.md  manage.py  pyproject.toml
KsClothing/: asgi.py  settings.py  urls.py  wsgi.py
store/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py
